add AddOperationBenchmark
Signed-off-by: daniellehrner <daniel.lehrner@consensys.net>